@@ -227,26 +227,37 @@ Defined profiles in cucumber.yml:
       cli.execute!(stub('step mother'), mock_executor, stub('features'))
     end
 
-    it "should extract line numbers attached to the end of feature file args" do
-      cli = CLI.new
-      cli.parse_options!(%w{example.feature:10})
-      
-      cli.options[:lines_for_features]['example.feature'].should == [10]
-    end
-    
-    it "should remove line numbers attached to the end of feature file" do
-      cli = CLI.new
-      cli.parse_options!(%w{example.feature:10})
-      
-      cli.paths.should == ["example.feature"]
-    end
+    describe "example.feature:line file arguments" do
 
-    it "should support multiple feature:line numbers" do
-      cli = CLI.new
-      cli.parse_options!(%w{example.feature:11 another_example.feature:12})
+      it "should extract line numbers" do
+        cli = CLI.new
+        cli.parse_options!(%w{example.feature:10})
       
-      cli.options[:lines_for_features].should == {'another_example.feature' => [12], 'example.feature' => [11]}
-    end
+        cli.options[:lines_for_features]['example.feature'].should == [10]
+      end
+    
+      it "should remove line numbers" do
+        cli = CLI.new
+        cli.parse_options!(%w{example.feature:10})
+      
+        cli.paths.should == ["example.feature"]
+      end
+
+      it "should support multiple feature:line numbers" do
+        cli = CLI.new
+        cli.parse_options!(%w{example.feature:11 another_example.feature:12})
+      
+        cli.options[:lines_for_features].should == {'another_example.feature' => [12], 'example.feature' => [11]}
+      end
+
+      it "should accept multiple line numbers for a single feature" do
+        cli = CLI.new
+        cli.parse_options!(%w{example.feature:11:12})
+      
+        cli.options[:lines_for_features].should == {'example.feature' => [11, 12]}
+      end
+    
+  end
 
     it "should search for all features in the specified directory" do
       cli = CLI.new
